# game

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  main.cpp
src/Classes/: AppDelegate.cpp  AppDelegate.h  EffectsController.cpp  EffectsController.h  GameCharacter.cpp  GameCharacter.h  GameController.cpp  GameController.h  GameLoopLayer.cpp  GameLoopLayer.h  HelloWorldScene.cpp  IBaseEffect.h  IGameEventListener.h  ILobbyEventListener.h  IMapEventListener.h  LobbyController.cpp  LobbyController.h  MapController.cpp  MapController.h  MoveController.cpp  MoveController.h  SmoothTransitionEffect.cpp  SmoothTransitionEffect.h  TMXPathFinding.cpp  TMXPathFinding.h
src/Tests/: CMakeLists.txt  EffectsControllerTest.cpp  GameControllerTest.cpp  LobbyControllerTest.cpp  MapControllerTest.cpp  MoveControllerStub.cpp  MoveControllerStub.h  MoveControllerTest.cpp  README  fakeit.hpp  makefile.osx
src/proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
src/proj.android-studio/: settings.gradle
src/proj.android-studio/app/: AndroidManifest.xml  build.gradle
src/proj.ios_mac/IsoGame.xcodeproj/: project.pbxproj
src/proj.ios_mac/ios/: Info.plist
src/proj.ios_mac/mac/: Info.plist
src/proj.win10/: IsoGame.sln
src/proj.win10/App/: IsoGame.vcxproj  IsoGame.vcxproj.filters  Package.appxmanifest
src/proj.win32/: IsoGame.sln
src/proj.win8.1-universal/: IsoGame.sln
src/proj.win8.1-universal/App.Shared/: IsoGame.Shared.vcxitems
src/proj.win8.1-universal/App.Windows/: IsoGame.Windows.vcxproj  IsoGame.Windows.vcxproj.filters  Package.appxmanifest
(+8 files in other folders)
